python-test-server-1/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: python-test-server-mtls-strict
spec:
  mtls:
    mode: STRICT
