python-test-server-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-server-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-test-server-1
  template:
    metadata:
      labels:
        app: python-test-server-1
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: python-test-server
          image: kimsehwan96/python-server
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
