python-test-server-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test-server-service-1
  labels:
    app: python-test-server-1
spec:
  type: ClusterIP
  selector:
    app: python-test-server-1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
