python-test-server-1/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'python.hayden.com'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
